<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_States" Id="{11a005be-0297-4fb5-969c-f097945fdbd4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
        
    {attribute 'pytmc' := '
     pv: MR1K4:SOMS:COATING:STATE;
     io: io;
    '}
    fbMR1K4_Coating_States: FB_Coating_States; 
    
    MR1K4_SiC : DUT_PositionState := (
        bUseRawCounts := TRUE,
        bMoveOk := TRUE,
        bValid := TRUE,
        sName := 'SiC',  
        nEncoderCount := 22000532,
        fDelta := 1000,
        fVelocity := 150,
        stBeamParams := PMPS_GVL.cstFullBeam,
        nRequestAssertionID := 16#DAB2);
        
    MR1K4_B4C : DUT_PositionState := (
        bUseRawCounts := TRUE,
        bMoveOk := TRUE,
        bValid := TRUE,
        sName := 'B4C',  
        nEncoderCount := 5000141,
        fDelta := 1000,
        fVelocity := 150,
        stBeamParams := PMPS_GVL.cstFullBeam,
        nRequestAssertionID := 16#DAB3);
            
    {attribute 'pytmc' := '
     pv: MR2K4:KBO:COATING:STATE;
     io: io;
    '}
    fbMR2K4_Coating_States: FB_Coating_States; 
    
    MR2K4_SiC : DUT_PositionState := (
        bUseRawCounts := TRUE,
        bMoveOk := TRUE,
        bValid := TRUE,
        sName := 'SiC',  
        nEncoderCount := 8701960,
        fDelta := 1,
        fVelocity := 0.150,
        stBeamParams := PMPS_GVL.cstFullBeam,
        nRequestAssertionID := 16#DAD2);
        
    MR2K4_B4C : DUT_PositionState := (
        bUseRawCounts := TRUE,
        bMoveOk := TRUE,
        bValid := TRUE,
        sName := 'B4C',  
        nEncoderCount := 6636177,
        fDelta := 1,
        fVelocity := 0.150,
        stBeamParams := PMPS_GVL.cstFullBeam,
        nRequestAssertionID := 16#DAD3);
    {attribute 'pytmc' := '
     pv: MR3K4:KBO:COATING:STATE;
     io: io;
    '}
    fbMR3K4_Coating_States: FB_Coating_States; 
    
    MR3K4_SiC : DUT_PositionState := (
        bUseRawCounts := TRUE,
        bMoveOk := TRUE,
        bValid := TRUE,
        sName := 'SiC',  
        nEncoderCount := 4719890,
        fDelta := 1,
        fVelocity := 0.150,
        stBeamParams := PMPS_GVL.cstFullBeam,
        nRequestAssertionID := 16#ACE2);
        
    MR3K4_B4C : DUT_PositionState := (
        bUseRawCounts := TRUE,
        bMoveOk := TRUE,
        bValid := TRUE,
        sName := 'B4C',  
        nEncoderCount := 8220029,
        fDelta := 1,
        fVelocity := 0.150,
        stBeamParams := PMPS_GVL.cstFullBeam,
        nRequestAssertionID := 16#ACE3);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>